--- a/css/master.css
+++ b/css/master.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Clicker+Script&display=swap');
@@ -1822,4 +1822,78 @@ hr {
 	 .item-1 h1 {
 		 font-size: 24px;
 	}
+}
+.mainmenu  h1{
+	font-family:sans-serif;
+	font-size: 40px;
+}
+.mainmenu {
+	display: flex;
+	flex-direction: row
+}
+.mainmenu_flex1 {
+	margin-left: 10%;
+}
+.menu_heading {
+	display: flex;
+	font-size: 20px;
+	margin-top: -3%;
+	font-family: 'Lato', sans-serif;
+}
+.mainmenu_dots {
+	margin-top: 1.0%;
+}
+.mainmenu_menu {
+	margin-top: 1.0%;
+
+}
+.mainmenu_price {
+	font-size: 20px;
+	margin-top: 3%;
+font-weight: 300;
+}
+.menu_heading_inde {
+	color: grey;
+	margin-top: -1.5%;
+	font-family: 'Lato', sans-serif;
+
+}
+
+.container {
+	margin-left: 5%;
+	margin-right: 5%;
+}
+.container > a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2em;
+}
+
+.container > a > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  box-shadow: 0 2px 16px var(--shadow);
+}
+
+.container {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+  grid-auto-rows: 120px;
+  grid-auto-flow: dense;
+}
+
+.horizontal {
+  grid-column: span 2;
+}
+
+.vertical {
+  grid-row: span 2;
+}
+
+.big {
+  grid-column: span 2;
+  grid-row: span 2;
 }
