--- a/css/master.css
+++ b/css/master.css
@@ -950,9 +950,11 @@ i.fa.fa-tag::before {
     top: 0px;
     left: 0px;
     width: 100%;
-    height: 100%;
+		background-color: transparent;
+		   height: 100%;
  background-image:url(https://habitualmente.com/wp-content/uploads/2015/08/cambiar-habitos-de-alimentacion-destacada.jpg);
   background-size: 100%;
+	background-repeat: no-repeat !important;
   border: none
    text-indent: -999em;
   overflow: hidden;
@@ -1599,6 +1601,7 @@ box-shadow: inset 0px 850px 500px -500px #fff;
     }
 }
 
+
 @media all and (max-width: 300px) {
 	body {
 		font-size: 14px;
@@ -1628,7 +1631,16 @@ box-shadow: inset 0px 850px 500px -500px #fff;
 
 
 /* About Page Start  */
+
 .about_page {
+	background-image: url("https://i.ibb.co/jRndhTF/Copy-of-Copy-of-Untitled-5.png");
+	height: 60vh;
+	width: 100%;
+	background-size: cover;
+	font-family: 'Clicker Script', cursive;
+	position: absolute;
+}
+.about_pageasd {
 	background-image: url("https://i.ibb.co/jRndhTF/Copy-of-Copy-of-Untitled-5.png");
 	height: 60vh;
 	width: 100%;
@@ -1719,7 +1731,6 @@ hr {
 	font-family: 'Lato', sans-serif;
 	margin-left: 30%;
 	width: 100%;
-
 
 }
 .about_page_section3_main_specialties h4{
@@ -2052,6 +2063,8 @@ span {
 	}
 	.logo {
 		padding-top: 10%;
+		font-family: 'Alex Brush', cursive;
+
 	}
 	.header .logo {
 		display: block;
@@ -2066,4 +2079,131 @@ span {
 .landing {
 	height: 92vh;
 }
+.secondtext {
+	margin-top: 170%;
+	margin-left: 20%;
+}
+.firstimage {
+	display: none;
+}
+.about_head {
+	font-size: 25px;
+}
+.about__text {
+	font-family: 'Open Sans', sans-serif;
+	font-size: 14px;
+	letter-spacing: 1px;
+	width: 105%;
+	margin-top: -130%;
+	margin-left: -20%;
+}
+.section2 {
+	width: 80%;
+	margin-top: 45.5%;
+	margin-left: 20%;
+}
+.about {
+	margin-bottom: 134%;
+}
+.menu_mainheading {
+	font-size: 25px;
+}
+.cd-item {
+	margin-left: 5%;
+	margin-right: 5% !important;
+}
+.testim {
+	width: 90%;
+	margin-top: 120%;
+}
+.dots {
+	margin-left: -10%;
+}
+.contact {
+	margin-top: -120%;
+	height: 120vh;
+}
+.fa {
+	display: none !important;
+}
+.contact_number {
+font-size: 17px;
+}
+.video_wrapper {
+  width: 90%;
+  margin: 0 auto;
+  margin-bottom: 100px;
+  position: relative;
+  background-repeat: no-repeat !important;
+  border: none !important;
+}
+.videoPoster:before {
+	margin-top: -50%;
+
+}
+.videoPoster:after {
+	margin-top: -45%;
+
+}
+.waves svg {
+	margin-top: -30%;
+	height: 23.2vh;
+	width: 100%;
+}
+.about_page__section2 {
+	display: block;
+	background-image: none;
+}
+.about_page__welcome_red {
+	font-size: 50px;
+	color: #F7882B;
+	width: 110%;
+	font-family: 'Alex Brush', cursive;
+}
+.about_page_maintext {
+	margin-left: 10%;
+	margin-top: -20%;
+}
+.about_page__restaurant_name {
+	font-size:30px;
+	margin-top: -22%;
+}
+hr {
+	width: 90%;
+}
+.about_page {
+	height: 40vh;
+}
+.about_page__about_paragraph {
+	max-width: 90%;
+	font-size: 15px;
+font-family: 'Lato', sans-serif;
+}
+.contact {
+	margin-top: 100%;
+
+}
+.about_page_section3 {
+	margin-top: 100%;
+}
+#about_page__section3__restaurant_name {
+	margin-top: -20%;
+}
+.about_page_section3_main_specialties {
+	display: block;
+	margin-left: 10%;
+}
+
+.about_page_section3_main_specialties h4{
+	margin-left: 35%;
+	margin-top: 8%;
+	font-size: 15px;
+
+}
+
+.about_page_section3_main_specialties p{
+	margin-top: -8%;
+	margin-left: 35%;
+	width: 130%;
+
 }
