--- a/css/menu.css
+++ b/css/menu.css
@@ -794,6 +794,7 @@ width: 413px;
 #checkout{
 border: 2px solid #f7a85f;
 font-size: 13px;
+background-color: #fff;
 font-weight: 700;
 padding: 3px 9px;
 position: absolute;
